[metadata]
name = powersgd
version = 0.0.2
author = Thijs Vogels
author_email = thijs.vogels@epfl.ch
description = PowerSGD: Gradient Compression Algorithm for Distributed Computation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/powersgd/issues
project_urls =
    Bug Tracker = https://github.com/epfml/powersgd/issues

[options]
install_requires =
    torch>=1.10.2
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest